RegressionTests/TestSuiteExport/reject/missing_type.blade
// EXPECT: fail
// DIAGNOSTICS: E0104

cog var x: = 0;